Prevent 1px h scrollbar caused by v scrollbar

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -27,6 +27,7 @@ body {
     font-family:"objektiv-mk1",Helvetica,Arial,sans-serif !important;
     margin: 0;
     padding: 0;
+    overflow-x: hidden;
     text-rendering: optimizeLegibility;
     font-size: 16px;
     color: var(--black);
